Examples/test-suite/errors/cpp_bad_global_memberptr.i
%module xxx

struct Funcs {};

short (Funcs::* *)(bool) = 0;
short (Funcs::* const*)(bool) = 0;
